--- a/AnalogClock/App.xaml
+++ b/AnalogClock/App.xaml
@@ -2,8 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AnalogClock"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Forms/Clock.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <BitmapImage x:Key="PinkStyle" UriSource="Styles/Style2.png"></BitmapImage>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
