--- a/AnalogClock/Forms/Clock.xaml
+++ b/AnalogClock/Forms/Clock.xaml
@@ -1,12 +1,40 @@
 ﻿<Window x:Class="AnalogClock.Forms.Clock"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:AnalogClock.Forms"
-        mc:Ignorable="d"
-        Title="Clock" Height="450" Width="800">
-    <Grid>
-        
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    Title="Clock" Margin="2" Height="327" Width="311" AllowsTransparency="True" 
+        WindowStyle="None" Background="Transparent" WindowStartupLocation="CenterScreen" 
+        ResizeMode="NoResize" Topmost="False" Opacity="1">
+    <Grid Width="200" Height="200" >
+        <Image Source="{DynamicResource PinkStyle}" Margin="-48,-52,-52,-48" ></Image>
+
+        <Label Name="christianityCalendar" Foreground="White" Margin="0, 0, 0, 80" HorizontalAlignment="Center" VerticalAlignment="Bottom" Height="Auto" Width="Auto">تاریخ میلادی</Label>
+        <Label Name="persianCalendar" Foreground="White" Margin="0, 80, 0, 0" HorizontalAlignment="Center" VerticalAlignment="Top" Height="Auto" Width="Auto">تاریخ شمسی</Label>
+
+        <!-- Second  -->
+        <Rectangle Margin="150,30,149,150" Name="rectangleSecond" Stroke="White" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeStartLineCap="Round" StrokeLineJoin="Round">
+            <Rectangle.RenderTransform>
+                <RotateTransform x:Name="secondHand" CenterX="0" CenterY="120" Angle="0" />
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <!-- -->
+
+        <!-- Minute  -->
+        <Rectangle Margin="150,49,149,151" Name="rectangleMinute" Stroke="LightGreen">
+            <Rectangle.RenderTransform>
+                <RotateTransform x:Name="minuteHand" CenterX="0" CenterY="100" Angle="0" />
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <!-- -->
+
+        <!-- Hour  -->
+        <Rectangle Margin="150,80,149,150" Name="rectangleHour" Stroke="LightYellow">
+            <Rectangle.RenderTransform>
+                <RotateTransform x:Name="hourHand" CenterX="0" CenterY="70" Angle="0" />
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <TextBlock Margin="120,140,97,130" Name="textBlock1" Text="Amin Mirzaei" Foreground="White" />
+        <TextBlock Margin="80,160,71,117" Name="textBlock2" Text="aminmirzaei.og@gmail.com" Foreground="DodgerBlue" />
+        <!---->
+
     </Grid>
 </Window>
