- Create Style4 Resource (Red Style)

--- a/AnalogClock/App.xaml
+++ b/AnalogClock/App.xaml
@@ -8,6 +8,7 @@
             <BitmapImage x:Key="RedStyle" UriSource="Styles/Style1.png"></BitmapImage>
             <BitmapImage x:Key="PinkStyle" UriSource="Styles/Style2.png"></BitmapImage>
             <BitmapImage x:Key="BlackStyle" UriSource="Styles/Style3.png"></BitmapImage>
+            <BitmapImage x:Key="WhiteStyle" UriSource="Styles/Style4.png"></BitmapImage>
         </ResourceDictionary>
 
     </Application.Resources>
