--- a/AnalogClock/Forms/About.xaml
+++ b/AnalogClock/Forms/About.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:AnalogClock.Forms"
         mc:Ignorable="d"
         Title="About" Height="450" Width="800">
-    <Grid>
+    <Grid x:Name="AboutForm">
         
     </Grid>
 </Window>
