--- a/AnalogClock/Forms/About.xaml
+++ b/AnalogClock/Forms/About.xaml
@@ -8,7 +8,8 @@
         Title="About" Height="450" Width="800">
     <Grid x:Name="AboutForm" Background="#FF141414">
         <Image x:Name="DevImage" HorizontalAlignment="Center" Height="116" Margin="0,39,0,0" VerticalAlignment="Top" Width="116" Source="/Images/AminMirzaei.png"/>
-        <Label x:Name="LblDevName" Content="Developer : Amin Mirzaei" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" Foreground="White"/>
+        <Label x:Name="LblDevName" Content="Developer : Amin Mirzaei" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" Foreground="#FF22CCB1"/>
+        <Label x:Name="LblGithubID" Content="Github : AminMirzaeiOne" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="24" Foreground="#FF00B0FF" Margin="0,255,0,0"/>
 
     </Grid>
 </Window>
