--- a/AnalogClock/Forms/Clock.xaml
+++ b/AnalogClock/Forms/Clock.xaml
@@ -33,15 +33,15 @@
                 <MenuItem Header="Magenta" Foreground="White" Background="SlateBlue" Click="MMagenta_Click"/>
             </MenuItem>
             <MenuItem Header="Second Color">
-                <MenuItem Header="Black" Foreground="White" Background="Black"/>
-                <MenuItem Header="White" Foreground="Black" Background="White"/>
+                <MenuItem Header="Black" Foreground="White" Background="Black" Click="SBlack_Click"/>
+                <MenuItem Header="White" Foreground="Black" Background="White" Click="SWhite_Click"/>
                 <Separator></Separator>
-                <MenuItem Header="Red" Foreground="White" Background="Red"/>
-                <MenuItem Header="Blue" Foreground="White" Background="DodgerBlue"/>
-                <MenuItem Header="Green" Foreground="White" Background="Green"/>
-                <MenuItem Header="Orange" Foreground="White" Background="Tomato"/>
-                <MenuItem Header="Gold" Foreground="Black" Background="Gold"/>
-                <MenuItem Header="Magenta" Foreground="White" Background="SlateBlue"/>
+                <MenuItem Header="Red" Foreground="White" Background="Red" Click="SRed_Click"/>
+                <MenuItem Header="Blue" Foreground="White" Background="DodgerBlue" Click="SBlue_Click"/>
+                <MenuItem Header="Green" Foreground="White" Background="Green" Click="SGreen_Click"/>
+                <MenuItem Header="Orange" Foreground="White" Background="Tomato" Click="SOrange_Click"/>
+                <MenuItem Header="Gold" Foreground="Black" Background="Gold" Click="SGold_Click"/>
+                <MenuItem Header="Magenta" Foreground="White" Background="SlateBlue" Click="SMagenta_Click"/>
             </MenuItem>
         </ContextMenu>
     </Window.ContextMenu>
